@@ -16,6 +16,7 @@
 # See the GNU Lesser General Public License in COPYING.LGPL for more details.
 #
 
+
 StarPU 1.3.4 (git revision xxx)
 ==============================================
 
@@ -24,6 +25,8 @@ Small features:
     STARPU_WORKER_STATS_FILE to specify files in which to display
     statistics about data transfers and workers.
   * Add starpu_bcsr_filter_vertical_block filtering function.
+  * Add starpu_interface_copy2d, 3d, and 4d to easily request data copies from
+    data interfaces.
 
 StarPU 1.3.3 (git revision 11afc5b007fe1ab1c729b55b47a5a98ef7f3cfad)
 ====================================================================
